NetBSD Problem Report #53644

From gson@gson.org  Sun Sep 30 09:01:53 2018
Return-Path: <gson@gson.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 572C47A1EB
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 30 Sep 2018 09:01:53 +0000 (UTC)
Message-Id: <20180930090148.54FA2989231@guava.gson.org>
Date: Sun, 30 Sep 2018 12:01:48 +0300 (EEST)
From: gson@gson.org (Andreas Gustafsson)
Reply-To: gson@gson.org (Andreas Gustafsson)
To: gnats-bugs@NetBSD.org
Subject: pppoe tests failing since Aug 24
X-Send-Pr-Version: 3.95

>Number:         53644
>Category:       kern
>Synopsis:       pppoe tests failing since Aug 24
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    maxv
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Sep 30 09:05:00 +0000 2018
>Closed-Date:    Mon Oct 01 06:09:36 +0000 2018
>Last-Modified:  Mon Oct 01 06:09:36 +0000 2018
>Originator:     Andreas Gustafsson
>Release:        NetBSD-current, source date >= 2018.08.24.17.06.29
>Organization:
>Environment:
System: NetBSD
Architecture: i386
Machine: i386
>Description:

Since maxv's commit of src/sys/net/if_pppoe.c 1.143 on CVS source date
2018.08.24.17.06.29, the following pppoe tests are failing in every
run on i386 and sparc, but not on amd64:

  net/if_pppoe/t_pppoe/pppoe_chap
  net/if_pppoe/t_pppoe/pppoe6_pap
  net/if_pppoe/t_pppoe/pppoe6_chap
  net/if_pppoe/t_pppoe/pppoe_pap

An automated report about the issue was sent to current-users
on Aug 25:

  https://mail-index.netbsd.org/current-users/2018/08/25/msg034117.html

This listed only one of the failing tests, probably because the others
had recently shown random failures.  The pppoe tests have been failing
occasionally for a long time, but this PR is specifically about them
now failing every time.

Log output from a recent set of test failures is at:

  http://releng.netbsd.org/b5reports/i386/2018/2018.09.29.13.19.38/test.html#net_if_pppoe_t_pppoe_pppoe6_chap

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->maxv
Responsible-Changed-By: gson@NetBSD.org
Responsible-Changed-When: Sun, 30 Sep 2018 09:07:46 +0000
Responsible-Changed-Why:
Over to committer.


From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/53644: pppoe tests failing since Aug 24
Date: Sun, 30 Sep 2018 11:10:03 +0200

 They also fail on arm (32 bit) but work on sparc64 and alpha.

 Martin

From: coypu@sdf.org
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/53644: pppoe tests failing since Aug 24
Date: Sun, 30 Sep 2018 09:26:19 +0000

 Looks like we still have a lingering sizeof(sc); in if_pppoe.c:1749
 going to do a build to see if changing it to sizeof(sc->sc_id) fixes
 the tests.

From: "Maxime Villard" <maxv@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/53644 CVS commit: src/sys/net
Date: Sun, 30 Sep 2018 10:00:25 +0000

 Module Name:	src
 Committed By:	maxv
 Date:		Sun Sep 30 10:00:25 UTC 2018

 Modified Files:
 	src/sys/net: if_pppoe.c

 Log Message:
 remove hardcoded bullshit, probably fixes PR/53644


 To generate a diff of this commit:
 cvs rdiff -u -r1.143 -r1.144 src/sys/net/if_pppoe.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: gson@NetBSD.org
State-Changed-When: Mon, 01 Oct 2018 06:09:36 +0000
State-Changed-Why:
Fixed by maxv in src/sys/net/if_pppoe.c 1.144, thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.