remove hardcoded bullshit, probably fixes PR/53644